<resources>
    <string name="app_name">Apprentissage Academy</string>
    <string name="apprentissage_academy">Apprentissage Academy</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Mot de passe</string>
    <string name="se_connecter">Se connecter</string>
    <string name="facebook">Facebook</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="or">OR</string>
    <string name="privacy">by proceeding you are agree of service and privacy notice</string>
    <string name="telephone">Telephone</string>
    <string name="password2">Répéter le mot de passe</string>
    <string name="privacy_policy_page">Privacy policy page</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tabbed_college_1">tabbed_college_1</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_index__main">Index_Main</string>
    <string name="title_activity_index_main_">index_main_</string>
    <string name="title_activity_index">Index</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity__ens">Activity_ENSA</string>
    <string name="title_activity__encg">Activity_ENCG</string>
    <string name="title_activity__cpge">Activity_CPGE</string>
    <string name="title_activity_contact">Contact</string>
    <string name="facebook_app_id">462974037743910</string>
    <string name="fb_login_protocol_scheme">fb462974037743910</string>
    <string name="_1_cours_soutien_nous_vous_proposons_les_meilleurs_professeurs_pour_vous_aider_dans_votre_projet_acad_mique_avec_nous_le_succ_s_sera_votre_ami_permanent">1- Cours soutien Nous vous proposons les meilleurs professeurs pour vous aider dans votre projet académique, Avec nous le succès sera votre ami permanent.</string>
    <string name="_1_cours_soutien">1-Cours soutien</string>
    <string name="nous_vous_proposons_les_meilleurs_professeurs_pour_vous_aider_dans_votre_projet_acad_mique_avec_nous_le_succ_s_sera_votre_ami_permanent">Nous vous proposons les meilleurs professeurs pour vous aider dans votre projet académique, Avec nous le succès sera votre ami permanent.</string>

</resources>
