<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/logo01"
                android:layout_width="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="250dp"
                android:src="@drawable/logo"/>


            <TextView
                android:id="@+id/textview01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apprentissage_academy"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_gravity="center" />

            <EditText
                android:id="@+id/EmailSeConnect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_email_black_24dp"
                android:layout_marginTop="20dp"
                android:hint="@string/e_mail"
                android:autofillHints=""
                tools:targetApi="o"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/PasswordSeconnect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_lock_black_24dp"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:autofillHints=""
                tools:targetApi="o"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/SeConnect"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/se_connecter"
                android:background="@drawable/btn_style"/>

            <TextView
                android:layout_marginTop="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/or"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/fbbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_style" />

            <Button
                android:id="@+id/Sinscrire"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_inscrire"
                android:background="@drawable/btn_style"/>


            <TextView
                android:id="@+id/privacyPolicy01"
                android:layout_marginTop="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/privacy"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/login_progress_Bar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:visibility="gone"
             />
    </RelativeLayout>


</ScrollView>