<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sinscrire">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/logo01"
                android:layout_width="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="250dp"
                android:src="@drawable/logo"/>

            <EditText
                android:id="@+id/EmailSinscrire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableEnd="@drawable/ic_email_black_24dp"
                android:hint="@string/e_mail"
                android:autofillHints=""
                tools:targetApi="o"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/TelephoneSinscrire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_local_phone_black_24dp"
                android:layout_marginTop="20dp"
                android:hint="@string/telephone"
                android:autofillHints=""
                tools:targetApi="o"
                android:inputType="phone" />

            <EditText
                android:id="@+id/PasswordSinscrire1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_lock_black_24dp"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:autofillHints=""
                tools:targetApi="o"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/PasswordSinscrire2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_lock_black_24dp"
                android:layout_marginTop="20dp"
                android:hint="@string/password2"
                android:autofillHints=""
                tools:targetApi="o"
                android:inputType="textPassword" />

            <TextView
                android:layout_marginTop="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/privacy"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <Button
                android:id="@+id/Creat"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_inscrire"
                android:background="@drawable/btn_style"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/signup_progress_Bar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:visibility="gone"
            />
    </RelativeLayout>


</ScrollView>